--- a/lazynotes/templates/account/login.html
+++ b/lazynotes/templates/account/login.html
@@ -35,7 +35,7 @@
                         <hr/>
                         <div class = "d-block">
                             <a href = "{% url 'account_signup' %}" class = "btn btn-primary">Sign Up</a>
-                            <a href = "#" class = "btn btn-primary">Forgot Password ?</a>
+                            <a href = "{% url 'account_reset_password' %}" class = "btn btn-primary">Forgot Password ?</a>
                         </div>
                     </form>
                 </div>
