--- a/notes/templates/base.html
+++ b/notes/templates/base.html
@@ -29,7 +29,7 @@
                     <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">{{user.username}}
                   </a>
                   <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#"><i class="far fa-user-circle"></i> My Account</a></li>
+                    <li><a class="dropdown-item" href="{% url 'profile' user.profile.slug %}"><i class="far fa-user-circle"></i> My Account</a></li>
                     <li><a class="dropdown-item" href="#">Another action</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout <i class="fas fa-sign-out-alt"></i></a></li>
