--- a/notes/static/styles.css
+++ b/notes/static/styles.css
@@ -46,3 +46,23 @@
 .custom-icon-link{
   color:black;
 }
+@media screen and (max-width: 1090px) {
+  .profile-text{
+    font-size: 14px !important;
+  }
+}
+@media screen and (max-width: 980px) {
+  .profile-text{
+    font-size: 10px !important;
+  }
+}
+@media screen and (max-width: 980px) {
+  .profile-text{
+    font-size: 10px !important;
+  }
+}
+@media screen and (max-width: 770px) {
+  .profile-text{
+    font-size: 20px !important;
+  }
+}
