--- a/notes/templates/base.html
+++ b/notes/templates/base.html
@@ -26,7 +26,12 @@
               {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">{{user.username}}
+                    {% if user.profile.avatar %}
+                    <img src="{{user.profile.avatar.url}}" alt="" width="32" height="32" class="rounded-circle me-2">
+                    {% else %}
+                    <img src="{% static 'default.png' %}" alt="" width="32" height="32" class="rounded-circle me-2">
+                    {% endif %}
+                    {{user.username}}
                   </a>
                   <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="{% url 'profile' user.profile.slug %}"><i class="far fa-user-circle"></i> My Account</a></li>
