--- a/lazynotes/templates/lazynotes/viewallnotes.html
+++ b/lazynotes/templates/lazynotes/viewallnotes.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 <div class = "container">
-    <h1 class = "text-center">Note{{note_count|pluralize}}</h1>
+    <h1 class = "text-center">{{user.username}}'s Note{{Notes.count|pluralize}}</h1>
     <hr/>
     {% if Notes %}
     <div class='container d-inline-block'>
@@ -30,31 +30,8 @@
                 </div>
                 {% endfor %}
             </div>
-            {% if Notes.has_other_pages %}
-      <ul class = 'pagination justify-content-center'>
-        {% if Notes.has_previous %}
-          <li class = 'page-item'><a class="page-link" href="?page={{ Notes.previous_page_number }}">&laquo;</a></li>
-        {% else %}
-      <li class="disabled page-item" ><a href="#" class="page-link">&laquo;</a></li>
-    {% endif %}
-    {% for num in Notes.paginator.page_range %}
-      {% ifequal num Notes.number %}
-        <li class="active page-item"><a href="#" class="page-link">{{ num }}<span class="sr-only">(current)</span></a></li>
-      {% else %}
-        <li class = 'page-item'><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
-      {% endifequal %}
-    {% endfor %}
-    {% if Notes.has_next %}
-      <li class = 'page-item'><a class="page-link" href="?page={{ Notes.next_page_number }}">&raquo;</a></li>
     {% else %}
-      <li class="disabled page-item"><a class="page-link" href="#">&raquo;</a></li>
-    {% endif %}
-      </ul>
-      {% endif %}
-            <div class = "d-flex d-inline-block float-end py-2">
-                <a href = "{% url 'note_create' %}" class = "btn btn-primary"><i class="fas fa-plus"></i> Add Note</a>
-            </div>
-    {% else %}
+        <h3 class = 'text-center'>No Notes Added. Wanna Add some ?</h3>
         <div class = "d-flex d-inline-block justify-content-center">
             <a href = "{% url 'note_create' %}" class = "btn btn-primary"><i class="fas fa-plus"></i> Add Note</a>
         </div>
