--- a/notes/static/styles.css
+++ b/notes/static/styles.css
@@ -1,3 +1,6 @@
+body{
+  font-family: 'Oxygen', sans-serif;
+}
 .custom-card{
   transition-timing-function: ease;
   transition: 0.3s;
@@ -65,4 +68,12 @@
   .profile-text{
     font-size: 20px !important;
   }
+}
+.footer-text{
+  text-decoration: none;
+}
+.custom-font{
+  font-family: 'Nothing You Could Do', cursive;
+  font-size: 25px;
+  font-weight: bold;
 }
