--- a/notes/templates/base.html
+++ b/notes/templates/base.html
@@ -10,6 +10,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="{% static 'styles.css' %}" type="text/css" media="screen" >
+  <link rel="apple-touch-icon" href="{% static 'icon.png' %}" sizes="180x180">
+  <link rel="icon" href="{% static 'icon.png' %}" sizes="32x32" type="image/png">
+  <link rel="icon" href="{% static 'icon.png' %}" sizes="16x16" type="image/png">
+  <link rel="mask-icon" href="{% static 'icon.png' %}" color="#563d7c">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
   <title>Lazy Notes</title>
 </head>
 <body>
@@ -17,7 +27,10 @@
     <div class = "container">
       <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Lazy Notes</a>
+          <a class="navbar-brand custom-font" href='{% url "home" %}'>
+            <img src ='{% static "icon.png" %}' class='d-inline-block align-top-right' height=50 width=50/>
+            Lazy Notes
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -35,7 +48,7 @@
                   </a>
                   <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="{% url 'profile' user.profile.slug %}"><i class="far fa-user-circle"></i> My Account</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="{% url 'view_all_notes' %}"><i class="fas fa-book-open"></i> View All Notes</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout <i class="fas fa-sign-out-alt"></i></a></li>
                   </ul>
@@ -52,7 +65,13 @@
     {% block content %}
     {% endblock %}
   </div>
-
+  <footer class="text-muted">
+    <div class="container text-center">
+      <p class='text-body'>
+        <a href = "{% url 'home' %}" class = 'text-muted footer-text'>© Lazy Notes {% now "Y" %}</a>
+      </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
