--- a/lazynotes/templates/account/password_reset_from_key.html
+++ b/lazynotes/templates/account/password_reset_from_key.html
@@ -4,11 +4,20 @@
 <div class="container">
     <h1>Change Password</h1>
     <hr/>
-    <form method = "POST">
-        {% csrf_token %}
-        {{form|crispy}}
-        <br/>
-        <button type = "submit" class = "btn btn-primary">Change Password</button>
-    </form>
+    {% if token_fail %}
+        {% url 'account_reset_password' as passwd_reset_url %}
+        <p>The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.</p>
+    {% else %}
+        {% if form %}
+            <form method = "POST">
+                {% csrf_token %}
+                {{form|crispy}}
+                <br/>
+                <button type = "submit" class = "btn btn-primary">Change Password</button>
+            </form>
+            {% else %}
+            <p>Your password is now changed.</p>
+        {% endif %}
+    {% endif %}
 </div>
 {% endblock %}
